INT-21031 theme_snap: Fix spacing within content buttons in the content page of the Lesson activity

--- a/scss/_core.scss
+++ b/scss/_core.scss
@@ -2676,6 +2676,9 @@ ul.events-new + ul.events-underway {
 
 .branchbuttoncontainer {
     margin: 2em 0;
+    .singlebutton {
+        margin-bottom: 10px;
+    }
 }
 
 // -------------------------
